# fastoml

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md
include/fastoml/: backend.h  backend_meta.h  config.h  iengine.h  iframe.h  imodel.h  iprediction.h  parameter_meta.h  types.h
include/fastoml/ncsdk/: engine.h  frame.h  model.h  parameters.h  prediction.h  types.h
include/fastoml/tensorflow/: engine.h  frame.h  model.h  parameters.h  prediction.h  types.h
src/: CMakeLists.txt  backend.cpp  backend_meta.cpp  config.h.in  iengine.cpp  iframe.cpp  imodel.cpp  iprediction.cpp  parameter_meta.cpp  types.cpp
src/ncsdk/: engine.cpp  frame.cpp  model.cpp  parameters.cpp  prediction.cpp  types.cpp
src/tensorflow/: engine.cpp  frame.cpp  model.cpp  parameters.cpp  prediction.cpp  types.cpp
tests/: stb_image.h  stb_image_resize.h  test_ml.cpp
